# library-management-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260613_0001_initial_schema.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  authors.py  books.py  health.py  imports.py  users.py
app/core/: config.py  exceptions.py  logging.py  normalization.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  author.py  book.py  import_job.py  refresh_token.py  user.py
app/schemas/: auth.py  author.py  book.py  common.py  import_result.py  user.py
app/services/: auth_service.py  author_service.py  book_service.py  import_service.py
tests/: conftest.py
tests/integration/: test_auth.py  test_authors_books.py  test_health.py  test_imports.py
tests/unit/: test_book_schema.py  test_config.py  test_normalization.py  test_strict_schemas.py
